--- a/src/main/resources/templates/include/fore/modal4login.html
+++ b/src/main/resources/templates/include/fore/modal4login.html
@@ -21,7 +21,7 @@
                             <span class="loginInputIcon ">
                                 <span class=" glyphicon glyphicon-lock"></span>
                             </span>
-          <input v-model="user.password" type="password" placeholder="密码" type="text">
+          <input v-model="user.password" type="password" placeholder="密码">
         </div>
         <span class="text-danger">不要输入真实的天猫账号密码</span><br><br>
         <div>
